# PixelRayAndroid

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/SDL2/src/core/android/: SDL_android.c
app/src/androidTest/java/com/example/testndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cmake/: pixelray.cmake
app/src/main/cpp/: Boid.cpp  Boid.h  Flock.cpp  Flock.h  Game.cpp  Game.h  SDL_android_main.c  ScreenDimensions.h  TextureLoader.cpp  TextureLoader.h  Vector2D.cpp  Vector2D.h  main.cpp  native-lib.cpp
app/src/main/java/com/example/testndk/: ApplicationDemo.java  Cocos2dxActivity.java  Cocos2dxGLSurfaceView.java  Cocos2dxRenderer.java  MainActivity.java  SDLActivity.java
app/src/main/res/values/: strings.xml
app/src/main/src/: CMakeLists.txt  SDL_android_main.c  build.gradle  main.cpp
gradle/wrapper/: gradle-wrapper.properties
